# AudioPlayer

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  TrackInfoUI.cpp  TrackInfoUI.h  readme.md  track.cpp
HeaderFiles/: AudioWrapper.h  DataManager.h  DescriptionButton.h  OpenDirectory.h  ScrollBarTracks.h  StartScreen.h  TrackInfoAbstract.h  TrackInfoUI.h  VolumeSlider.h  fontUtils.h  track.h
Resources/: resources.qrc
SourceFiles/: AudioWrapper.cpp  DataManager.cpp  DescriptionButton.cpp  OpenDirectory.cpp  ScrollBarTracks.cpp  StartScreen.cpp  TrackInfoAbstract.cpp  TrackInfoUI.cpp  VolumeSlider.cpp  fontUtils.cpp  main.cpp  mainwindow.cpp  track.cpp
core/: AudioFileLoader.cpp  AudioFileLoader.h  Errors.h  PlayAudio.cpp  PlayAudio.h  main.cpp
core/Headers/: PlayAudio.h
core/Source/: AudioFileLoader.cpp  PlayAudio.cpp
include/: DataManager.h  mainwindow.h
include/UI/: ScrollBarTracks.h  StartScreen.h  TrackInfoUI.h
src/: DataManager.cpp  mainwindow.cpp  track.cpp
src/UI/: DescriptionButton.cpp  OpenDirectory.cpp  ScrollBarTracks.cpp  StartScreen.cpp  TrackInfoAbstract.cpp  TrackInfoUI.cpp  VolumeSlider.cpp
src/Utils/: fontUtils.cpp
